parsing/parser/src/tests/snapshots/diom_parser__tests__snapshots__floats-2.snap
---
source: parsing/parser/src/tests/snapshots.rs
expression: expr
---
Float(
    Float {
        value: 5.0,
        info: SpanTokens(
            [
                SpanToken {
                    token: Float(
                        5.0,
                    ),
                    origin: "5.0",
                },
            ],
        ),
    },
)
