parsing/parser/src/tests/snapshots/diom_parser__tests__snapshots__floats-4.snap
---
source: parsing/parser/src/tests/snapshots.rs
expression: expr
---
Float(
    Float {
        value: 0.5,
        info: SpanTokens {
            tokens: [
                SpanToken {
                    token: Float(
                        0.5,
                    ),
                    origin: "5e-1",
                },
            ],
        },
    },
)
