parsing/parser/src/tests/snapshots/diom_parser__tests__snapshots__floats-5.snap
---
source: parsing/parser/src/tests/snapshots.rs
expression: expr
---
Prefix(
    Prefix {
        name: Op {
            sym: Minus,
            info: SpanTokens {
                tokens: [
                    SpanToken {
                        token: Minus,
                        origin: "-",
                    },
                ],
                origin: "-",
            },
        },
        value: Float(
            Float {
                value: 0.005,
                info: SpanTokens {
                    tokens: [
                        SpanToken {
                            token: Float(
                                0.005,
                            ),
                            origin: "0.5e-2",
                        },
                    ],
                    origin: "0.5e-2",
                },
            },
        ),
        info: SpanTokens {
            tokens: [
                SpanToken {
                    token: Minus,
                    origin: "-",
                },
                SpanToken {
                    token: Float(
                        0.005,
                    ),
                    origin: "0.5e-2",
                },
            ],
            origin: "- 0.5e-2",
        },
    },
)
