parsing/parser/src/tests/snapshots/diom_parser__tests__snapshots__floats.snap
---
source: parsing/parser/src/tests/snapshots.rs
expression: expr
---
Float(
    Float {
        value: 5.0,
        info: SpanTokens {
            tokens: [
                SpanToken {
                    token: Float(
                        5.0,
                    ),
                    origin: "5",
                },
            ],
            origin: "5",
        },
    },
)
