parsing/parser/src/tests/snapshots/diom_parser__tests__snapshots__functions.snap
---
source: parsing/parser/src/tests/snapshots.rs
expression: expr
---
Function(
    Function {
        arms: [
            FunctionArm {
                parameters: Parameters {
                    parameters: [],
                    info: SpanTokens {
                        tokens: [
                            SpanToken {
                                token: LParen,
                                origin: "(",
                            },
                            SpanToken {
                                token: RParen,
                                origin: ")",
                            },
                        ],
                        origin: "()",
                    },
                },
                annotation: None,
                returned: Float(
                    Float {
                        value: 5.0,
                        info: SpanTokens {
                            tokens: [
                                SpanToken {
                                    token: Float(
                                        5.0,
                                    ),
                                    origin: "5",
                                },
                            ],
                            origin: "5",
                        },
                    },
                ),
                info: SpanTokens {
                    tokens: [
                        SpanToken {
                            token: LParen,
                            origin: "(",
                        },
                        SpanToken {
                            token: RParen,
                            origin: ")",
                        },
                        SpanToken {
                            token: Function,
                            origin: "=>",
                        },
                        SpanToken {
                            token: Float(
                                5.0,
                            ),
                            origin: "5",
                        },
                    ],
                    origin: "() => 5",
                },
            },
        ],
        info: SpanTokens {
            tokens: [
                SpanToken {
                    token: LParen,
                    origin: "(",
                },
                SpanToken {
                    token: RParen,
                    origin: ")",
                },
                SpanToken {
                    token: Function,
                    origin: "=>",
                },
                SpanToken {
                    token: Float(
                        5.0,
                    ),
                    origin: "5",
                },
            ],
            origin: "() => 5",
        },
    },
)
